add new css and index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,5 +10,11 @@ h1{
     font-size: xx-large;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: black;
-    margin: center;
+    font-style: italic;
 }
+test-box {
+    border: 2px solid red;
+    padding: 6px;
+    margin: 20px;
+    background-color: yellow;
+  }
