--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 p{
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
-    color: black
+    color: black;
+    font-style: oblique;
 }
 body{
     background-color: whitesmoke;
