--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body{
     background-color: whitesmoke;
 }
 h1{
-    font-size: xx-large;
+    font-size: larger;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: black;
     font-style: italic;
