--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@ h1{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: black;
     font-style: italic;
+    background-color: blue;
+    text-align: center;
 }
 test-box {
     border: 2px solid blue;
